non-prod/route/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/redirect-regex: ^http://myapp-dev.app.corpintra.net/(.*)
    traefik.ingress.kubernetes.io/redirect-replacement: https://myapp-dev.app.corpintra.net/${1}
    #cert-manager.io/cluster-issuer: acme
  name: myapp-dev-ingress
  namespace: api-dev
spec:
  rules:
  - host: myapp-dev.app.corpintra.net
    http:
      paths:
        - path: /
          #pathType: Prefix
          backend:
            serviceName: microgateway-service
            servicePort: 8080
            
  tls:
  - hosts:
    - myapp-dev.app.corpintra.net
    secretName: dia4u-dev-tls-secret #will be automatically generated by acme app. Has to be unique within namespace
